src/objects/DRDW_Cap_Request__c.object
<CustomObject>
    <fields>
        <fullName>Study_Type__c</fullName>
        <label>Study Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Serology</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Efficacy</fullName>
                </value>
                <value>
                    <fullName>CMD</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>POP</fullName>
                </value>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Type__c</fullName>
        <label>Testing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Pre-Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Post-Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Serum Neutralization</fullName>
                </value>
                <value>
                    <fullName>ELISA</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>Western Blot</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Plasma Separation</fullName>
                </value>
                <value>
                    <fullName>Isolations</fullName>
                </value>
                <value>
                    <fullName>Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Animals__c</fullName>
        <label>Total Number of Animals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Breed__c</fullName>
        <label>Type/Breed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Species__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BALB/c</fullName>
                </value>
                <value>
                    <fullName>Beagle</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Broiler</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Dunkin Hartley</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Mini Mongrel</fullName>
                </value>
                <value>
                    <fullName>New Zealand White</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Swiss Webster</fullName>
                </value>
                <value>
                    <fullName>Syrian Golden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vaccination_Phase_No_of_treatment_grps__c</fullName>
        <label>Vaccination Phase: No. of treatment grps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Liberty Research Inc.</fullName>
                </value>
                <value>
                    <fullName>Ridglan Farms</fullName>
                </value>
                <value>
                    <fullName>Marshall BioResources</fullName>
                </value>
                <value>
                    <fullName>Covance</fullName>
                </value>
                <value>
                    <fullName>Charles River Laboratories</fullName>
                </value>
                <value>
                    <fullName>Charles River Avian Services</fullName>
                </value>
                <value>
                    <fullName>Hilltop Lab Animals</fullName>
                </value>
                <value>
                    <fullName>Envigo</fullName>
                </value>
                <value>
                    <fullName>Elm Hill Labs</fullName>
                </value>
                <value>
                    <fullName>The Jackson Laboratory</fullName>
                </value>
                <value>
                    <fullName>Taconic Farms</fullName>
                </value>
                <value>
                    <fullName>J&amp;R Livestock</fullName>
                </value>
                <value>
                    <fullName>Superior Livestock</fullName>
                </value>
                <value>
                    <fullName>Valo BioMedia</fullName>
                </value>
                <value>
                    <fullName>Rock Creek Swine</fullName>
                </value>
                <value>
                    <fullName>Struve Laboratories</fullName>
                </value>
                <value>
                    <fullName>Wilson Praire View Farms</fullName>
                </value>
                <value>
                    <fullName>Bakkom&apos;s Rabbitry</fullName>
                </value>
                <value>
                    <fullName>Exemplar Genetics</fullName>
                </value>
                <value>
                    <fullName>Pipestone Veterinary Services/Clinic</fullName>
                </value>
                <value>
                    <fullName>AMVC WeSearch LLC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>how_many_months_pregnant__c</fullName>
        <label>How many months pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isFormNotComplete_TF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFormNotComplete TF</label>
        <type>Checkbox</type>
    </fields>
	 <fields>
        <fullName>Testing_or_Lab_Requirements__c</fullName>
        <label>Testing or Lab Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
	 <fields>
        <fullName>Sample_to_Collect_Collection_Required__c</fullName>
        <label>Sample to Collect &amp; Collection Required</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
	 <fields>
        <fullName>Proposed_Animal_Arrival_Date__c</fullName>
        <label>Proposed Animal Arrival Date</label>
        <type>Date</type>
    </fields>
    <label>DRDW Request</label>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>DRDW Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Requests</pluralLabel>
    <recordTypes>
        <fullName>ERL</fullName>
        <active>true</active>
        <label>ERL</label>
    </recordTypes>
    <recordTypes>
        <fullName>GO</fullName>
        <active>true</active>
        <label>GO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>